tests/proph/lemma_tests.stderr
warning: unused imports: `Prophecised`, `Prophecy`, `extract_lemma`, `mutref_auto_resolve`, `prophecies::with_freeze_lemma_for_mutref`
  --> ../tests/proph/lemma_tests.rs:7:20
   |
7  |         assertion, extract_lemma, lemma, predicate, prophecies::with_freeze_lemma_for_mutref,
   |                    ^^^^^^^^^^^^^                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
10 |     mutref_auto_resolve,
   |     ^^^^^^^^^^^^^^^^^^^
11 |     prophecies::{Ownable, Prophecised, Prophecy},
   |                           ^^^^^^^^^^^  ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _4
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
error: proofs are expected to be sequences of statements

error: aborting due to 1 previous error; 1 warning emitted

